# practice-2021

./: CMakeLists.txt  Звіт.docx  Щоденник .docx
Lab1/: CMakeLists.txt  main.cpp  test.cpp
Lab1/include/: array.h
Lab1/src/: array.cpp
Lab2/: 1.txt  2.txt  CMakeLists.txt  files.cpp
Lab2/include/: file.h
Lab2/src/: file.cpp
Lab3/: CMakeLists.txt  main.cpp
Lab3/include/: simple_s.h
Lab3/src/: simple_s.cpp
Lab4/: CMakeLists.txt  main.cpp
Lab4/include/: book.h  person.h  register.h
Lab4/src/: book.cpp  person.cpp  register.cpp
Task_A/: CMakeLists.txt  main.cpp
Task_A/include/: employee.h  fixed_emp.h  hour_employee.h  staff.h
Task_A/src/: employee.cpp  fixed_emp.cpp  hour_employee.cpp  staff.cpp
script/: lab.cmake
